@@ -4,4 +4,7 @@
     <xpath expr="/tree/field[@name='type']" position="before">
         <field name="state" icon="icon"/>
     </xpath>
+    <xpath expr="/tree" position="inside">
+        <field name="color" tree_invisible="1"/>
+    </xpath>
 </data>
