@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<tryton>
+    <data depends="account_invoice">
+        <record model="ir.ui.view" id="invoice_view_form">
+            <field name="model">account.invoice</field>
+            <field name="type">form</field>
+            <field name="inherit" ref="account_invoice.invoice_view_form"/>
+            <field name="name">invoice_form</field>
+        </record>
+    </data>
+</tryton>
