@@ -10,9 +10,12 @@ depends:
     premium
     report_engine
     account_cog
+extras_depend:
+    account_invoice
 xml:
     icon.xml
     account.xml
     move.xml
     payment.xml
     party.xml
+    invoice.xml
