@@ -11,3 +11,4 @@ depends:
 xml:
     payment.xml
     offered.xml
+    invoice.xml
