@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<data>
+    <xpath expr="/tree/field[@name='state']" position="after">
+        <field name="pending_payment"/>
+    </xpath>
+</data>
